; ModuleID = '/home/carl/AnghaBench/linux/drivers/iio/trigger/extr_stm32-timer-trigger.c_stm32_counter_write_raw.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iio/trigger/extr_stm32-timer-trigger.c_stm32_counter_write_raw.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iio_dev = type { i32 }
%struct.iio_chan_spec = type { i32 }
%struct.stm32_timer_trigger = type { i32, i32 }

@TIM_CNT = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@TIM_CR1 = common dso_local global i32 0, align 4
@TIM_CR1_CEN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.iio_dev*, %struct.iio_chan_spec*, i32, i32, i64)* @stm32_counter_write_raw to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @stm32_counter_write_raw(%struct.iio_dev* %0, %struct.iio_chan_spec* %1, i32 %2, i32 %3, i64 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.iio_dev*, align 8
  %8 = alloca %struct.iio_chan_spec*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i64, align 8
  %12 = alloca %struct.stm32_timer_trigger*, align 8
  %13 = alloca i32, align 4
  store %struct.iio_dev* %0, %struct.iio_dev** %7, align 8
  store %struct.iio_chan_spec* %1, %struct.iio_chan_spec** %8, align 8
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i64 %4, i64* %11, align 8
  %14 = load %struct.iio_dev*, %struct.iio_dev** %7, align 8
  %15 = call %struct.stm32_timer_trigger* @iio_priv(%struct.iio_dev* %14)
  store %struct.stm32_timer_trigger* %15, %struct.stm32_timer_trigger** %12, align 8
  %16 = load i64, i64* %11, align 8
  switch i64 %16, label %76 [
    i64 129, label %17
    i64 128, label %24
    i64 130, label %27
  ]

17:                                               ; preds = %5
  %18 = load %struct.stm32_timer_trigger*, %struct.stm32_timer_trigger** %12, align 8
  %19 = getelementptr inbounds %struct.stm32_timer_trigger, %struct.stm32_timer_trigger* %18, i32 0, i32 1
  %20 = load i32, i32* %19, align 4
  %21 = load i32, i32* @TIM_CNT, align 4
  %22 = load i32, i32* %9, align 4
  %23 = call i32 @regmap_write(i32 %20, i32 %21, i32 %22)
  store i32 %23, i32* %6, align 4
  br label %79

24:                                               ; preds = %5
  %25 = load i32, i32* @EINVAL, align 4
  %26 = sub nsw i32 0, %25
  store i32 %26, i32* %6, align 4
  br label %79

27:                                               ; preds = %5
  %28 = load i32, i32* %9, align 4
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %30, label %53

30:                                               ; preds = %27
  %31 = load %struct.stm32_timer_trigger*, %struct.stm32_timer_trigger** %12, align 8
  %32 = getelementptr inbounds %struct.stm32_timer_trigger, %struct.stm32_timer_trigger* %31, i32 0, i32 1
  %33 = load i32, i32* %32, align 4
  %34 = load i32, i32* @TIM_CR1, align 4
  %35 = call i32 @regmap_read(i32 %33, i32 %34, i32* %13)
  %36 = load i32, i32* %13, align 4
  %37 = load i32, i32* @TIM_CR1_CEN, align 4
  %38 = and i32 %36, %37
  %39 = icmp ne i32 %38, 0
  br i1 %39, label %45, label %40

40:                                               ; preds = %30
  %41 = load %struct.stm32_timer_trigger*, %struct.stm32_timer_trigger** %12, align 8
  %42 = getelementptr inbounds %struct.stm32_timer_trigger, %struct.stm32_timer_trigger* %41, i32 0, i32 0
  %43 = load i32, i32* %42, align 4
  %44 = call i32 @clk_enable(i32 %43)
  br label %45

45:                                               ; preds = %40, %30
  %46 = load %struct.stm32_timer_trigger*, %struct.stm32_timer_trigger** %12, align 8
  %47 = getelementptr inbounds %struct.stm32_timer_trigger, %struct.stm32_timer_trigger* %46, i32 0, i32 1
  %48 = load i32, i32* %47, align 4
  %49 = load i32, i32* @TIM_CR1, align 4
  %50 = load i32, i32* @TIM_CR1_CEN, align 4
  %51 = load i32, i32* @TIM_CR1_CEN, align 4
  %52 = call i32 @regmap_update_bits(i32 %48, i32 %49, i32 %50, i32 %51)
  br label %75

53:                                               ; preds = %27
  %54 = load %struct.stm32_timer_trigger*, %struct.stm32_timer_trigger** %12, align 8
  %55 = getelementptr inbounds %struct.stm32_timer_trigger, %struct.stm32_timer_trigger* %54, i32 0, i32 1
  %56 = load i32, i32* %55, align 4
  %57 = load i32, i32* @TIM_CR1, align 4
  %58 = call i32 @regmap_read(i32 %56, i32 %57, i32* %13)
  %59 = load %struct.stm32_timer_trigger*, %struct.stm32_timer_trigger** %12, align 8
  %60 = getelementptr inbounds %struct.stm32_timer_trigger, %struct.stm32_timer_trigger* %59, i32 0, i32 1
  %61 = load i32, i32* %60, align 4
  %62 = load i32, i32* @TIM_CR1, align 4
  %63 = load i32, i32* @TIM_CR1_CEN, align 4
  %64 = call i32 @regmap_update_bits(i32 %61, i32 %62, i32 %63, i32 0)
  %65 = load i32, i32* %13, align 4
  %66 = load i32, i32* @TIM_CR1_CEN, align 4
  %67 = and i32 %65, %66
  %68 = icmp ne i32 %67, 0
  br i1 %68, label %69, label %74

69:                                               ; preds = %53
  %70 = load %struct.stm32_timer_trigger*, %struct.stm32_timer_trigger** %12, align 8
  %71 = getelementptr inbounds %struct.stm32_timer_trigger, %struct.stm32_timer_trigger* %70, i32 0, i32 0
  %72 = load i32, i32* %71, align 4
  %73 = call i32 @clk_disable(i32 %72)
  br label %74

74:                                               ; preds = %69, %53
  br label %75

75:                                               ; preds = %74, %45
  store i32 0, i32* %6, align 4
  br label %79

76:                                               ; preds = %5
  %77 = load i32, i32* @EINVAL, align 4
  %78 = sub nsw i32 0, %77
  store i32 %78, i32* %6, align 4
  br label %79

79:                                               ; preds = %76, %75, %24, %17
  %80 = load i32, i32* %6, align 4
  ret i32 %80
}

declare dso_local %struct.stm32_timer_trigger* @iio_priv(%struct.iio_dev*) #1

declare dso_local i32 @regmap_write(i32, i32, i32) #1

declare dso_local i32 @regmap_read(i32, i32, i32*) #1

declare dso_local i32 @clk_enable(i32) #1

declare dso_local i32 @regmap_update_bits(i32, i32, i32, i32) #1

declare dso_local i32 @clk_disable(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
